# Personal-finance-tracker-with-ai

./: .env  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 34297d80cecb_initial.py  63afe9b3b2a0_add_relationship.py  65d26c6f7803_add_relationship.py  6e89f7f10d8f_fix_incomes_and_category.py  a0e43f5fa547_refactor_income_to_transaction_fix_.py
app/models/: categories.py  incomes.py  transaction.py  users.py  wallets.py
app/routers/: analytics.py  auth.py  categories.py  incomes.py  transaction.py  users.py  wallets.py
app/schemas/: categories.py  incomes.py  transaction.py  user.py  wallets.py
app/utils/: config.py  database.py  dependencies.py  security.py  seed.py
